# NEON-utilities-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: python_package.yml
docs/: aop_tutorial.md  conf.py  faq.md  getting-started.rst  index.md  index.rst  read_table_neon.md  tabular_tutorial.md  tutorials.rst
docs/_html/: .buildinfo  .buildinfo.bak  api.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  tutorials.html
docs/_html/.doctrees/: api.doctree  environment.pickle  getting-started.doctree  index.doctree  tutorials.doctree
docs/_html/_sources/: api.rst.txt  getting-started.rst.txt
docs/functions/: index.md
docs/functions/aop/: by_file_aop.md  by_tile_aop.md  get_aop_tile_extents.md  index.md  list_available_dates.md
docs/functions/metadata/: get_citation.md  get_issue_log.md  index.md
docs/functions/processing/: index.md
docs/functions/tabular/: index.md  load_by_product.md  stack_by_table.md  zips_by_product.md
docs/getting-started/: api_token.md  basic_usage.md  installation.md
examples/: nu_example.py
neon-utilities-python/: CODE_OF_CONDUCT.md  pyproject.toml
neon-utilities-python/src/neonutilitiespy/: __init__.py  get_api.py  get_citation.py
neon-utilities-python/src/neonutilitiespy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nupy/: README.md  pyproject.toml  requirements.txt
nupy/src/neonutilities/: __init__.py  __version__.py  aop_download.py  api_helpers.py  by_file_aop.py  citation.py  get_api.py  get_issue_log.py  read_table_neon.py  tabular_download.py  unzip_and_stack.py  zips_by_product.py
nupy/src/neonutilities.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nupy/src/neonutilities/helper_mods/: __init__.py  api_helpers.py  metadata_helpers.py
nupy/testdata/NEON_litterfall_baseline/stackedFiles/: categoricalCodes_10033.csv  citation_10033_RELEASE-2024.txt  issueLog_10033.csv  ltr_fielddata.csv  ltr_litterCarbonNitrogen.csv  ltr_litterLignin.csv  ltr_massdata.csv
nupy/tests/: pytest.ini  test_aop_download.py  test_by_file_aop.py  test_get_citation.py  test_get_issue_log.py  test_load_by_product.py  test_stack_by_table.py  test_zips_by_product.py
src/neonutilities/: __init__.py  aop_download.py  citation.py  get_issue_log.py  read_table_neon.py  tabular_download.py  unzip_and_stack.py
src/neonutilities/__resources__/: frame_file_variables.csv  neon_field_site_metadata_20250214.csv  other_bundles.csv  science_review_variables.csv  sensor_positions_variables.csv  sensor_positions_variables_mapping.csv
src/neonutilities/helper_mods/: __init__.py  api_helpers.py  metadata_helpers.py
testdata/NEON_litterfall_baseline/stackedFiles/: bgc_CNiso_externalSummary.csv  lig_externalSummary.csv  ltr_chemistrySubsampling.csv  ltr_pertrap.csv  ltr_vegetationCover.csv  readme_10033.txt  validation_10033.csv  variables_10033.csv
tests/: test_aop_download.py  test_get_citation.py  test_get_issue_log.py  test_load_by_product.py  test_stack_by_table.py  test_zips_by_product.py
