[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neonutilities"
version = "1.0.1"
authors = [
    {name="Claire Lunch", email="clunch@battelleecology.org"},
    {name="Bridget Hass", email="bhass@battelleecology.org"},
    {name="Zachary Nickerson", email="nickerson@battelleecology.org"}
]
description="A package for accessing and wrangling data generated and published by the National Ecological Observatory Network."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "importlib-resources",
    "pandas",
    "parameterized",
    "pyarrow",
    "pyproj",
    "requests",
    "tqdm"
]

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
