[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neonutilities"
version = "0.0.1"
authors = [
    {name="Claire Lunch", email="clunch@battelleecology.org"},
    {name="Bridget Hass"},
    {name="Zach Nicherson"}
]
description="A package for accessing and wrangling data generated and published by the National Ecological Observatory Network."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datetime",
    "requests"
]