[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neonutilities"
version = "0.0.6"
authors = [
    {name="Claire Lunch", email="clunch@battelleecology.org"},
    {name="Bridget Hass", email="bhass@battelleecology.org"},
    {name="Zach Nicherson", email="nickerson@battelleecology.org"}
]
description="A package for accessing and wrangling data generated and published by the National Ecological Observatory Network."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datetime",
    "requests",
    "pathlib",
    "progress",
    "pandas",
    "importlib.metadata"
]

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neonutilities = ["*.csv"]