[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neonutilities"
version = "0.0.9"
authors = [
    {name="Claire Lunch", email="clunch@battelleecology.org"},
    {name="Bridget Hass", email="bhass@battelleecology.org"},
    {name="Zach Nicherson", email="nickerson@battelleecology.org"}
]
description="A package for accessing and wrangling data generated and published by the National Ecological Observatory Network."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datetime",
    "importlib-resources",
    "importlib.metadata",
    "pathlib",
    "pandas",
    "pyproj",
    "requests",
    "tqdm"
]

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]